--- a/src/app/forgot/forgot.component.html
+++ b/src/app/forgot/forgot.component.html
@@ -1,9 +1,9 @@
 <div class="login-section">
-    <h1>Forgot Password</h1>
-    <form>
+    <h2>Forgot Password</h2><br>
+    <form (submit)="getpassword()">
         <div class="form-group">
-            <label for="email">Email address</label>
-            <input name="email" type="email" id="email" aria-describedby="emailHelp" class="form-control">
+            <label for="email">&nbsp; Email address</label>
+            <input name="email"  type="email" placeholder="Enter your email" id="email" aria-describedby="emailHelp" class="form-control" [(ngModel)]='email'>
         </div>
         <button type="submit" class="btn btn-primary"> Get Password </button>
     </form>
