--- a/src/app/search-cake/search-cake.component.html
+++ b/src/app/search-cake/search-cake.component.html
@@ -1,1 +1,26 @@
-<p>search-cake works!</p>
+<div class = "filter">
+  <form (submit) = "sort()">
+    <input name="min" [(ngModel)] = "price.min">
+    <input name="max" [(ngModel)] = "price.max">
+    <button  type = "submit" class = "btn btn-primary">Sort</button>
+  </form>
+</div>
+<div class="cart">
+
+    <!-- routerLink='/cake/{{cards.cakeid}}' -->
+    <div 
+      appHovering
+      *ngFor="let cards of cakesort"
+      class="card"
+      style="width: 18rem"
+    >
+    <span class="veg" *ngIf="cards.eggless">🟢</span>
+    <span class="veg" *ngIf="!cards.eggless">🔴</span>
+      <img src="{{ cards.image }}" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Name:&nbsp;{{ cards.name }}</h5>
+        <p class="card-text">Price:&nbsp;₹ {{ cards.price }} </p>
+        <p class="card-text">Weight:&nbsp;{{ cards.weight }}kg</p>
+      </div>
+    </div>
+  </div>
