--- a/src/app/forgot/forgot.component.css
+++ b/src/app/forgot/forgot.component.css
@@ -6,13 +6,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 50px;
+    width: 50vw;
+    margin-top: 75px;
+    margin-left: 25vw;
     flex-direction: column;
     background: rgba(255, 255, 255, 0.521);
-    padding: 50px;
+    padding: 40px;
     border: 0.5px solid black;
+    border-radius: 15px;
 }
 
 #email{
-    width: 40vw;
+    width: 26vw;
+    margin-bottom: 10px;
 }
