--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,10 @@
 .loginForm {
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
     width: 30vw;
     box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
-    top: 10%;
+    top: 15%;
     left: 35%;
     position: fixed;
     z-index: 10;
@@ -18,10 +19,11 @@
 form {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
-    
+    flex-direction: column;   
 }
-h1{
+
+h2{
+    margin-top: 20px;
     text-align: center;
 }
 form .emailDiv {
