--- a/src/app/address/address.component.html
+++ b/src/app/address/address.component.html
@@ -7,30 +7,27 @@
                 <div class="col-50">
                     <h3>Billing Address</h3>
                     <label for="fname"><i class="fa fa-user" ></i> Full Name</label>
-                    <input type="text" id="fname" name="firstname" [(ngModel)]="orderdetails.name" placeholder="John M. Doe">
+                    <input type="text" id="fname" name="firstname" [(ngModel)]="cs.orderdetails.name" placeholder="John M. Doe">
                     <label for="text">Phone</label>
-                    <input type="text" id="email" name="email" [(ngModel)]="orderdetails.phone" placeholder="john@example.com">
+                    <input type="text" id="phone" name="phone" [(ngModel)]="cs.orderdetails.phone" placeholder="+91 9080109080">
                     <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-                    <input type="text" id="adr" name="address" [(ngModel)]="orderdetails.address" placeholder="542 W. 15th Street">
+                    <input type="text" id="adr" name="address" [(ngModel)]="cs.orderdetails.address" placeholder="542 W. 15th Street">
                     <label for="city"><i class="fa fa-institution"></i> City</label>
-                    <input type="text" id="city" name="city" [(ngModel)]="orderdetails.city" placeholder="New York">
+                    <input type="text" id="city" name="city" [(ngModel)]="cs.orderdetails.city" placeholder="New York">
     
                     <div class="row">
                 
                         <div class="col-50">
                             <label for="zip">Pincode</label>
-                            <input type="text" id="zip" name="zip" [(ngModel)]="orderdetails.pincode" placeholder="110001">
+                            <input type="text" id="zip" name="zip" [(ngModel)]="cs.orderdetails.pincode" placeholder="110001">
                         </div>
-                        <div class="col-50">
-                            <label for="zip" >Price</label>
-                            <input type="text" id="zip" name="zip" >
-                        </div>
+                        
                     </div>
                 </div>
   
             </div>
         
-            <input type="submit" value="Continue to checkout" class="btn">
+            <input type="submit" (click)='placeorder()' value="Continue to checkout" class="btn">
         </form>
     </div>
 </div>
