--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -10,8 +10,8 @@
     <div class="carousel-item active">
       <img src="./assets/cimg3.jpg" class="d-block w-100 size" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5>Offer Of the Week</h5>
+        <p>Dark Dutch || Cake of the week || Don't miss the chance.</p>
       </div>
     </div>
     <div class="carousel-item">
