--- a/src/app/confirm-details/confirm-details.component.html
+++ b/src/app/confirm-details/confirm-details.component.html
@@ -1,1 +1,39 @@
-<p>confirm-details works!</p>
+<div>
+    <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Image</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Weight</th>
+           
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let parcake of choosecake; let i=index">
+            <th scope="row">{{i+1}}</th>
+            <td><img class="sizes" src="{{parcake.image}}"/></td>
+   
+            <td>{{parcake.name}}</td>
+            <td>₹ {{parcake.price}}/-</td>
+            <td>{{parcake.weight}} kg</td>
+             </tr>
+          <tr>
+            <th></th>
+            <td></td>
+            <td>Total:</td>
+            <td>₹ {{choosecake.totalprice}}/-</td>
+            <td></td>
+           
+        </tr>
+          <tr>
+              <th></th>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td><button (click)="confirm()">Next &nbsp;<i class="fa fa-arrow-right" aria-hidden="true"></i></button></td>
+           </tr>
+         </tbody>
+      </table>
+</div>
