--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -1,44 +1,45 @@
 .signupForm {
     display: flex;
     flex-direction: column;
-    width: 30vw;
+    width: 32vw;
     box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
-    top: 10%;
-    left: 30%;
+    top: 18%;
+    left: 35%;
     position: fixed;
     z-index: 10;
     background-color: rgba(233, 233, 233, 0.801);
-    border-radius: 4px;
+    border-radius: 6px;
 }
-.loginForm svg {
-    align-items: flex-end;
-    align-self: flex-end;
-    margin: 5px;
+h3{
+    margin-top: 15px;
+    text-align: center;
 }
+
 form {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    margin: 20px;
     
 }
 
 form .nameDiv {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 0 15px 15px 15px;
     /* box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%); */
 }
 form .emailDiv {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 15px;
     /* box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%); */
 }
 
 form .passDiv {
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    padding: 15px;
     /* box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%); */
 }
 
@@ -54,16 +55,17 @@ form div i{
     justify-content: space-around;
     flex-direction: row;
     align-items: center;
-
-    padding: 20px;
+    padding: 15px;
 }
 
 .submit input[type = "submit"] {
-    width: 100vw;
-    margin: 5px;
+    width: 10vw;
+    padding: 5px;
+    color: white;
+    background-color: rgb(5, 182, 5);
+    border: 1px solid green;
+    border-radius: 5px;
 }
-
-.submit a {
-    width: 100vw;
-    margin: 5px;
+.submit input[type = "submit"]:hover{
+    background-color: darkgreen;
 }
