--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,5 @@
 <div class="signupForm">
+    <h3>SignUp</h3>
     <form action="#" (submit) = 'signup()' >
         <div class="nameDiv">
             <label for="name">Name</label>
