--- a/src/app/order/order.component.css
+++ b/src/app/order/order.component.css
@@ -5,7 +5,9 @@
 .contain{
     
     position: relative;
-    background-color: rgba(0,0,0,0.8);
+    box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+    background-color: rgba(255, 254, 254, 0.5);
+    border-radius: 4px;
     color: var(--gold);
     align-content: center;
     width: 60%;
@@ -15,7 +17,9 @@
 }
 .head,.tail{
     position: relative;
-    background-color: rgba(0,0,0,0.8);
+    box-shadow: 0 3px 1px -2px rgb(0 0 0 / 20%), 0 2px 2px 0 rgb(0 0 0 / 14%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+    background-color: rgba(51, 51, 51, 0.5);
+    border-radius: 4px;
     color: var(--gold);
     align-content: center;
     text-align: center;
@@ -55,16 +59,18 @@ left:40%;
 
 .bodyhead{
     position: relative;
+    padding: 4px 15px;
     left:40%;
-    top:20px;
-    color:#ffdead;
-    border:1px solid rgba(0,0,0,0.8);
-    background-color: black;
+    top: 30px;
+    color: #fff;
+    border: 1px solid rgba(0,0,0,0.8);
+    border-radius: 5px;
+    background-color: #3C1321;
 }
 .heads{
     position: relative;
-    background-color: rgba(0,0,0,0.8);
-    color: var(--gold);
+    background-color: #3C1321;
+    color: #fff;
     align-content: center;
     text-align: center;
     width: 100%;
