--- a/src/app/search-cake/search-cake.component.css
+++ b/src/app/search-cake/search-cake.component.css
@@ -2,32 +2,37 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
-    left:40px;
-    top:20px;
+    left:30px;
+    top:30px;
+}
+
+.card:hover{
+    transform: scale(1.1);
 }
 .card{
-    margin-bottom: 20px;
+    margin: 20px;
+    max-width: 220px;
+    /* margin-bottom: 20px; */
     position:relative;
+}
+
+.imgSize{
+    height: 180px;
 }
 .filter{
     position: relative;
-    left:40%;
+    left:35%;
     top:20px;
     margin:0 0 20px 0;
 }
-.box,.sort{
-    background-color: rgba(0,0,0,0.8);
-    margin:0 2px;
+
+.filterbtn{
+    border: 1px solid black;
+    border-radius: 3px;
+    padding: 2px 6px;
+    margin-left: 5px;
 }
-.sort{
-    border:1px solid var(--gold);
-    color:var(--gold);
-}
-.sort:hover{
-    border:1px solid var(--gold);
-    background-color: var(--gold);
-    color:black;
-}
+
 .veg{
     position:absolute;
     z-index: 2;
